# ekko-generator

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  changes.txt  changes1.txt  config.toml  speed-guide.md
.claude/: settings.local.json
database/: docker-compose.yml
ekko-generation/: Cargo.toml  Config.toml
ekko-generation/src/lib/: config_loader.rs  height_map.rs  shutdown_handler.rs  zarr_storage.rs
ekko-generation/src/tests/: generation_tests.rs
ekko-location/: Cargo.toml  Config.toml  Dockerfile  docker-compose.yml
ekko-location/src/: main.rs
ekko-location/src/lib/: config_loader.rs
src/: config_loader.rs  height_map.rs  main.rs  parallelization.rs  shutdown_handler.rs  storage.rs
src/lib/: config_loader.rs  height_map.rs  parallelization.rs  shutdown_handler.rs  storage.rs  zarr_storage.rs
src/old/: old.rs  old2.rs  old3.rs
src/tests/: generation_tests.rs
