[workspace]
resolver = "2"
members = [
    "ekko-generation",
    "ekko-location"
]

[profile.release]
debug = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.4", features = ["full", "signal"] }
ctrlc = "3.4"
rayon = "1.10"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

zarrs = "0.21.2"
zarrs_storage = "0.3.4"
zarrs_filesystem = "0.2.3"
