[package]
name = "ekko-generator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ekko-generator"
path = "src/main.rs"

[dependencies]
pumpkin-world = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", package = "pumpkin-world" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", package = "pumpkin-util" }
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", package = "pumpkin-data" }

tokio.workspace = true
ctrlc.workspace = true
rayon.workspace = true

toml.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

zarrs.workspace = true
zarrs_storage.workspace = true
zarrs_filesystem.workspace = true